2012-05-21 Braden McDaniel  <braden@endoframe.com>

	Apply /Ox consistently in all projects.  In the absense of any
	data pointing to the value of particular optimization settings,
	this seems appropriate.

	* examples/pretty-print.vcxproj
	* examples/sdl-viewer.vcxproj
	* src/libopenvrml/openvrml.vcxproj
	* src/libopenvrml-gl/openvrml-gl.vcxproj
	* src/local/libopenvrml-dl/openvrml-dl.vcxproj
	* src/node/vrml97/vrml97.vcxproj
	* src/node/x3d-cad-geometry/x3d-cad-geometry.vcxproj
	* src/node/x3d-core/x3d-core.vcxproj
	* src/node/x3d-dis/x3d-dis.vcxproj
	* src/node/x3d-environmental-effects/x3d-environmental-effects.vcxproj
	* src/node/x3d-event-utilities/x3d-event-utilities.vcxproj
	* src/node/x3d-geometry2d/x3d-geometry2d.vcxproj
	* src/node/x3d-geospatial/x3d-geospatial.vcxproj
	* src/node/x3d-grouping/x3d-grouping.vcxproj
	* src/node/x3d-h-anim/x3d-h-anim.vcxproj
	* src/node/x3d-interpolation/x3d-interpolation.vcxproj
	* src/node/x3d-key-device-sensor/x3d-key-device-sensor.vcxproj
	* src/node/x3d-networking/x3d-networking.vcxproj
	* src/node/x3d-nurbs/x3d-nurbs.vcxproj
	* src/node/x3d-rendering/x3d-rendering.vcxproj
	* src/node/x3d-shape/x3d-shape.vcxproj
	* src/node/x3d-texturing/x3d-texturing.vcxproj
	* src/script/javascript.vcxproj
	* tests/parse-x3dvrml.vcxproj
	* tests/parse-vrml97.vcxproj

2012-05-20 Braden McDaniel  <braden@endoframe.com>

	More project file clean-up.  Use /fp:fast consistently across
	projects and configurations.

	* examples/sdl-viewer.vcxproj
	* examples/pretty-print.vcxproj
	* src/libopenvrml/openvrml.vcxproj
	* src/libopenvrml-gl/openvrml-gl.vcxproj
	* src/local/libopenvrml-dl/openvrml-dl.vcxproj
	* src/node/vrml97/vrml97.vcxproj
	* src/node/x3d-cad-geometry/x3d-cad-geometry.vcxproj
	* src/node/x3d-core/x3d-core.vcxproj
	* src/node/x3d-dis/x3d-dis.vcxproj
	* src/node/x3d-environmental-effects/x3d-environmental-effects.vcxproj
	* src/node/x3d-event-utilities/x3d-event-utilities.vcxproj
	* src/node/x3d-geometry2d/x3d-geometry2d.vcxproj